# goit-ds-hw-03

./: app_scraper.py  authors.json  insert.py  main.py  pyproject.toml
