[project]
name = "module3-nosql-db-hw1"
version = "0.1.0"
description = ""
authors = [
    {name = "Renata",email = "renatavel4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymongo (>=4.11,<5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
